--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "test": "node test.js"
   },
   "dependencies": {
+    "dotenv": "^8.2.0",
     "ejs": "^2.5.6",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "pg": "^8.2.1"
   },
   "devDependencies": {
     "got": "^11.3.0",
