--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   },
   "dependencies": {
     "dotenv": "^8.2.0",
+    "dotnet": "^1.1.4",
     "ejs": "^2.5.6",
+    "env": "0.0.2",
     "express": "^4.17.1",
     "pg": "^8.2.1"
   },
